# mpvrs

./: .cursorignore  .gitignore  Cargo.toml  README.md
.cursor/rules/: guidelines.mdc  mpv-cli-enhancement-guide.mdc  rust.mdc  tauri-plugin-migration.mdc
assets/lua/: osc-tethys.lua
assets/mpv_config/: input.conf  mpv.conf
assets/mpv_config/script-opts/: autoload.conf  mpv_thumbnail_script.conf  osc.conf  tethys.conf
assets/mpv_config/watch_later/: 478E85F4D90EDD8B50CAFA165E238851  9734D0ADABAF1BDC20FE166DCF88C857  C0C8D417B09ACBD42C98363F9B36C914
docs/: tauri-integration.md
examples/: async_example.rs  integration_example.rs  ipc_control.rs  plugin_example.rs
mpv_config/: mpv.conf
mpv_config/script-opts/: uosc.conf
src/: config.rs  lib.rs  main.rs  player.rs
src/config/: ipc.rs  mod.rs
src/player/: events.rs  ipc.rs  process.rs
src/plugin/: mod.rs
src/presets/: config.rs
src/presets/platform/: detection.rs
tauri-plugin-playa/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-playa/guest-js/: index.ts
tauri-plugin-playa/permissions/: default.toml
tauri-plugin-playa/permissions/autogenerated/: reference.md
tauri-plugin-playa/permissions/schemas/: schema.json
tauri-plugin-playa/src/: commands.rs  lib.rs
