[package]
name = "neatflix-mpvrs"
version = "0.1.0"
edition = "2021"
description = "A Rust video player using mpv"
authors = ["0xmrwn <niches-anode0k@icloud.com>"]
license = "MIT"

[lib]
name = "neatflix_mpvrs"
path = "src/lib.rs"

[[bin]]
name = "neatflix-mpvrs"
path = "src/main.rs"

[[example]]
name = "plugin_example"
path = "examples/plugin_example.rs"

[[example]]
name = "async_example"
path = "examples/async_example.rs"

[dependencies]
log = "0.4"
env_logger = "0.11.6"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
lazy_static = "1.4.0"

[features]
default = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "winnt"] }